--- a/NEWCRM/Views/Case/CaseGroup1.cshtml
+++ b/NEWCRM/Views/Case/CaseGroup1.cshtml
@@ -1,6 +1,6 @@
 ﻿
 <div class="row">
-    <label class="col-sm-3 control-label">Commerce Type</label>
+    <label class="col-sm-3 control-label">ประเภทการซื้อขาย</label>
     <div class="col-sm-9 margin-bottom-xl">
         <select id="commerceType" name="commerceType" class="form-control">
 
@@ -11,7 +11,7 @@
         </select>
     </div>
     <br />
-    <label class="col-sm-3 control-label">Product Category</label>
+    <label class="col-sm-3 control-label">ประเภทสินค้า </label>
     <div class="col-sm-9 margin-bottom-xl">
         <select id="productCategory" name="productCategory" class="form-control">
 
@@ -23,7 +23,7 @@
         </select>
     </div>
     <br />
-    <label class="col-sm-3 control-label">Service Category</label>
+    <label class="col-sm-3 control-label">ประเภทบริการ</label>
     <div class="col-sm-9 margin-bottom-xl">
         <select id="serviceCategory" name="serviceCategory" class="form-control">
 
@@ -34,7 +34,7 @@
         </select>
     </div>
     <br />
-    <label class="col-sm-3 control-label">Delivery Type</label>
+    <label class="col-sm-3 control-label">วิธีการส่งสินค้า </label>
     <div class="col-sm-9 margin-bottom-xl">
         <select id="deliveryType" name="deliveryType" class="form-control">
 
@@ -45,7 +45,7 @@
         </select>
     </div>
     <br />
-    <label class="col-sm-3 control-label">Value Range</label>
+    <label class="col-sm-3 control-label">มลูค่าการซื้อขาย </label>
     <div class="col-sm-9 margin-bottom-xl">
         <select id="valueRange" name="valueRange" class="form-control">
 
@@ -56,7 +56,7 @@
         </select>
     </div>
     <br />
-    <label class="col-sm-3 control-label">Conversation Channel</label>
+    <label class="col-sm-3 control-label">ช่องทางการติดต่อ</label>
     <div class="col-sm-9 margin-bottom-xl">
         <select id="conversationChannel" name="conversationChannel" class="form-control">
 
