--- a/NEWCRM/Views/Case/CaseGroup2.cshtml
+++ b/NEWCRM/Views/Case/CaseGroup2.cshtml
@@ -1,12 +1,12 @@
 ﻿
 <div class="row">
     <div class="form-group">
-        <label class="col-sm-3 control-label">Reference Detail</label>
+        <label class="col-sm-3 control-label">หลักฐานประกอบ</label>
         <div class="col-sm-9 margin-bottom-xl">
             <textarea id="txtRefDetail" name="txtRefDetail" class="form-control" rows="6"></textarea>
         </div>
         <br />
-        <label class="col-sm-3 control-label">Detail</label>
+        <label class="col-sm-3 control-label">รายละเอียดร้องเรียน </label>
         <div class="col-sm-9 margin-bottom-xl">
             <textarea id="txtDetail" name="txtDetail" class="form-control" rows="6"></textarea>
         </div>
