--- a/NEWCRM/Views/Case/NewCase.cshtml
+++ b/NEWCRM/Views/Case/NewCase.cshtml
@@ -36,15 +36,8 @@
     <script src="~/Scripts/NewCase.js"></script>
     <script type="text/javascript">
 
-
-        $(document).ready(function () {
-            $("#ctdiv_7").hide();
-            $("#casIDLevel1").focus();
-            $("#cdt").hide();
-            $("#dv-callback").hide();
-            $("#ctdiv_4").hide();
-            $("#ctcaseparent").hide();
-
+        function resetValueGroup()
+        {
             //--load Status
             $("#cssID").val('1');
             $("#commerceType").val('1');
@@ -53,6 +46,26 @@
             $("#deliveryType").val('1');
             $("#valueRange").val('1');
             $("#conversationChannel").val('1');
+            $("#txtRefDetail").val('');
+            $("#txtDetail").val('');
+        }
+
+        function resetGroup()
+        {
+            $("#CaseGroup1").hide();
+            $("#CaseGroup2").hide();
+            $("#ctdiv_statusreason").hide();
+            resetValueGroup();
+        }
+
+        $(document).ready(function () {
+            $("#ctdiv_7").hide();
+            $("#casIDLevel1").focus();
+            $("#cdt").hide();
+            $("#dv-callback").hide();
+            $("#ctdiv_4").hide();
+            $("#ctcaseparent").hide();
+            resetGroup();
             
 
             $("#casURLAccount").autocomplete({
@@ -101,6 +114,7 @@
                 }
             });
 
+            
             $("input[name='cssID']").click(function () {
                 if ($(this).val() === '4') {
                     $("#dv-callback").slideDown(300);
@@ -139,15 +153,17 @@
             $('#newcase-list').fadeIn();
             $("#frm-newcase").get(0).reset();
             $("#casSLA").val('');
-            //$("#priID").val('2');
-            $("#cssID").val('2');
+            $("#ctcaseparent").val('');
+            $("#ctdiv_3").hide();
             $("#ctdiv_2").hide();
-            //$("#ctdiv_4").hide();
+            $("#ctdiv_4").hide();
+            $("#ctdiv_statusreason").hide();
             $("#ctdiv_opt").hide();
             $("#dv-callback").hide();
             openSuccessDialog('Save new case success');            
             getNewCaseList();
             $("#btnsavenewcase").removeAttr("disabled");
+            resetGroup();
         }
 
         function getNewCaseList()
@@ -199,6 +215,20 @@
             $("#cd").toggle(300);
         }
 
+        function statuschange(ref)
+        {
+
+            if( $(ref).val()=="4" )
+            {
+                $("#ctdiv_statusreason").show();
+            }
+            else
+            {
+                $("#ctdiv_statusreason").hide();
+                $("#cssStatusReason").val('');
+            }
+        }
+
         function nextctnode(ref) {
             var message = $(ref).find(':selected').attr('data-dialogue');
             var sla = $(ref).find(':selected').attr('data-sla');
@@ -207,7 +237,7 @@
             var current_lv = current_divnode.split("_")[1];
             var next_lv = parseInt(current_lv) + 1;
 
-            //alert(current_lv);
+            
 
             if ($(ref).val() === "") {
                 // Show - Hide another div
@@ -240,6 +270,16 @@
                     $("#ctdiv_3").hide();
                     $("#ctdiv_opt").hide();
                     $("#casSLA").val('');
+                    if( $(ref).val()=="1" )
+                    {
+                        $("#CaseGroup1").show();
+                        $("#CaseGroup2").show();
+                    }
+                    else {
+                        resetValueGroup();
+                        $("#CaseGroup1").hide();
+                        $("#CaseGroup2").show();
+                    }
                 }
                 if (current_lv == 2) {
                     //$("#ctdiv_3").empty().hide();
@@ -273,8 +313,10 @@
                         $("#ctdiv_" + next_lv).html(data);
                     });
                     
-                    if (next_lv == 3)
-                    {
+                    
+                } else {
+
+                    if (current_lv == 2) {
                         //alert(id);
                         var url = '@Url.Action("GetSourceType", "Casetype")';
                         $.post(url, function (data) {
@@ -284,9 +326,7 @@
                         $("#ctdiv_opt").show();
                         //$("#casURLAccount").focus();
                     }
-                } else {
-
-                    $("#casURLAccount").focus();
+                    //$("#casURLAccount").focus();
                     //$("#casNote").focus();                    
                     $("#sla").text(sla);                  
                     $("#casSLA").val(sla);
@@ -443,6 +483,9 @@
 
 
 
+
+
+
                             @if(NEWCRM.Common.AppUtils.Session.Activity.ctaID.HasValue)
                             {
                                 using (Ajax.BeginForm("NewCaseSave", "Case",
@@ -460,12 +503,12 @@
                                         <div id="ctdiv_2" class="form-group"></div>
                                         <div id="ctdiv_3" class="form-group"></div>
                                         <div id="ctdiv_4" class="form-group" >
-                                            <label for="casenote" class="col-sm-3 control-label">Reference Channel</label>
+                                            <label for="casenote" class="col-sm-3 control-label">รายละเอียดช่องทางซื้อขาย</label>
                                             <div class="col-sm-8 margin-bottom-xl">
                                                 <input type="text" class="form-control" id="casURLAccount" name="casURLAccount" required />
                                             </div>
                                             <div id="ctdiv_7" class="col-sm-1 margin-bottom-xl">
-                                                <h><span class="label label-warning">Child Cas</span></h>
+                                                <h><span class="label label-warning">Child Case</span></h>
                                                     <input type="hidden" class="form-control" id="casParentID" name="casParentID" value="" />
                                             </div>
                                             <div id="ctcaseparent" class="col-sm-12 margin-bottom-xl">
@@ -493,27 +536,46 @@
                                                 <textarea id="casNote" name="casNote" class="form-control" rows="6" required data-rule-minlength="1"></textarea>
                                             </div>
                                         </div>
+                                        
+
                                         <div id="ctdiv_opt" class="form-group">
-                                            <label class="col-sm-3 control-label">Status</label>
-                                            <div class="col-sm-9 margin-bottom-xl">
-                                                <select id="cssID" name="cssID" class="form-control">
-                                                     
-                                                    @foreach (var item in Model.list_status)
-                                                    { 
-                                                        <option value="@item.cssID">@item.cssName</option>
-                                                    }
-                                                </select>
+                                            <div class="form-group">
+                                                <label class="col-sm-3 control-label">Status</label>
+                                                <div class="col-sm-9 margin-bottom-xl">
+                                                    <select id="cssID" name="cssID" class="form-control" onchange="statuschange(this)">
+
+                                                        @foreach (var item in Model.list_status)
+                                                        {
+                                                            <option value="@item.cssID">@item.cssName</option>
+                                                        }
+                                                    </select>
+                                                </div>
+                                                </div>
+
+                                                <div id="ctdiv_statusreason" class="form-group">
+                                                    <label class="col-sm-3 control-label">Status Reason</label>
+                                                    <div class="col-sm-9 margin-bottom-xl">
+                                                        <select id="cssStatusReason" name="cssStatusReason" class="form-control">
+
+                                                            @foreach (var item in Model.list_status_reason)
+                                                            {
+                                                                <option value="@item">@item</option>
+                                                            }
+                                                        </select>
+                                                    </div>
+                                                </div>
+                                                <br />
+                                                <label class="col-sm-3 control-label">Case SLA</label>
+                                                <div class="col-sm-9">
+                                                    <p class="text-l">
+                                                        <h4><i class="fa fa-clock-o fa-fw"></i>&nbsp;<span id="sla">-</span>&nbsp;Minutes</h4>
+                                                        <input type="hidden" name="casSLA" id="casSLA" />
+                                                        <input type="hidden" name="slaID" id="slaID" />
+                                                    </p>
+                                                </div>
                                             </div>
-                                            <br />
-                                            <label class="col-sm-3 control-label">Case SLA</label>
-                                            <div class="col-sm-9">
-                                                <p class="text-l">
-                                                    <h4><i class="fa fa-clock-o fa-fw"></i>&nbsp;<span id="sla">-</span>&nbsp;Minutes</h4>
-                                                    <input type="hidden" name="casSLA" id="casSLA" />
-                                                    <input type="hidden" name="slaID" id="slaID" />
-                                                </p>
-                                            </div>
-                                        </div>
+
+
                                         <div id="dv-callback" class="form-group">
                                             @*<hr />
                                             <div class="card-head">
