--- a/NEWCRM/Views/Case/CaseGroup1.cshtml
+++ b/NEWCRM/Views/Case/CaseGroup1.cshtml
@@ -1,5 +1,5 @@
 ﻿
-<div class="row">
+<div class="row bg-warning">
     <label class="col-sm-3 control-label">ประเภทการซื้อขาย</label>
     <div class="col-sm-9 margin-bottom-xl">
         <select id="commerceType" name="commerceType" class="form-control">
