--- a/NEWCRM/Views/RepCase/Index.cshtml
+++ b/NEWCRM/Views/RepCase/Index.cshtml
@@ -191,7 +191,7 @@
                         </div>
                     </div>
                 </div>
-                @using (Ajax.BeginForm("getQuery", "RepCase",
+                @using (Ajax.BeginForm("getReport", "RepCase",
                                             new AjaxOptions { UpdateTargetId = "getQuery", HttpMethod = "post", OnBegin = "return beginQuery()", OnSuccess = "successQuery", OnFailure = "failureQuery" },
                                             new { id = "frm-casequery", @class = "form", autocomplete = "off" }))
                 {
