--- a/NEWCRM/Views/RepCase/rptCaseRep.cshtml
+++ b/NEWCRM/Views/RepCase/rptCaseRep.cshtml
@@ -6,6 +6,25 @@
 <div class="row">
     <div class="col-lg-12" style="padding: 0 30px 10px 30px;">
         <div class="table-responsive">
+            <table width="100%">
+                <thead>
+                    <tr class="gradeX">
+                        <th colspan="2">
+                            <h3>ETDAA Call Center</h3>
+                            <h4>Case Statistic Report</h4>
+                            
+
+
+                        </th>
+                        <th colspan="2"></th>
+                        <th>
+                            <div class="form-group no-padding pull-right">
+                                <img width="190px" height="100px" src="http://parnupongk.azurewebsites.net/images/logo.png" />
+                            </div>
+                        </th>
+                    </tr>
+                </thead>
+            </table>
             <table id="datatable1" class="table table-striped table-hover">
                 <thead>
                     <tr>
