--- a/NEWCRM/Views/Case/CaseGroup2.cshtml
+++ b/NEWCRM/Views/Case/CaseGroup2.cshtml
@@ -1,12 +1,19 @@
 ﻿
 <div class="row">
     <div class="form-group">
-        <label class="col-sm-3 control-label">หลักฐานประกอบ</label>
+        <label class="col-sm-3 control-label">วันที่เกิดเหตุ</label>
+        <div id="value-date-<%=index%>" class="input-group date field-date margin-bottom-xl bg-warning">
+            <div class="input-group-content">
+                <input type="text" id="eventDate" name="eventDate" class="form-control fv">
+            </div>
+            <span class="input-group-addon"><i class="fa fa-calendar"></i></span>
+        </div>
+        <label id="lblRedDetail" name="lblRedDetail" class="col-sm-3 control-label">หลักฐานประกอบ</label>
         <div class="col-sm-9 margin-bottom-xl bg-warning">
             <textarea id="txtRefDetail" name="txtRefDetail" class="form-control" rows="6"></textarea>
         </div>
         <br />
-        <label class="col-sm-3 control-label">รายละเอียดร้องเรียน </label>
+        <label id="lblDetail" name="lblDetail" class="col-sm-3 control-label">รายละเอียดร้องเรียน </label>
         <div class="col-sm-9 margin-bottom-xl bg-warning">
             <textarea id="txtDetail" name="txtDetail" class="form-control" rows="6"></textarea>
         </div>
