--- a/NEWCRM/Views/Case/NewCase.cshtml
+++ b/NEWCRM/Views/Case/NewCase.cshtml
@@ -67,7 +67,7 @@
             $("#ctcaseparent").hide();
             resetGroup();
             
-
+            $('.field-date').datepicker({ autoclose: true, todayHighlight: true, format: "dd/mm/yyyy" });
             $("#casURLAccount").autocomplete({
                 source: function (request, response) {
                     $.ajax({
@@ -237,7 +237,7 @@
             var current_lv = current_divnode.split("_")[1];
             var next_lv = parseInt(current_lv) + 1;
 
-            
+        
 
             if ($(ref).val() === "") {
                 // Show - Hide another div
@@ -247,54 +247,46 @@
                     $("#ctdiv_4").hide();
                     $("#ctdiv_5").empty().hide();
                 }
-                if (current_lv == 2) {
-                    //$("#ctdiv_3").empty().hide();
-                    $("#ctdiv_4").hide();
-                    $("#ctdiv_5").empty().hide();
-                }
-                if (current_lv == 3) {
-                    //$("#ctdiv_4").empty().hide();
-                    $("#ctdiv_5").empty().hide();
-                }
-                if (current_lv == 4) {
-                    $("#ctdiv_5").empty().hide();
-                }
                 $("#ctdiv_opt").hide();
                 $("#casSLA").val('');                
             } else {
                 if (current_lv == 1) {
                     $("#ctdiv_2").empty().hide();
-                    $("#ctdiv_3").empty().hide();
-                    $("#ctdiv_4").hide();
+                    $("#ctdiv_4").show();
                     $("#ctdiv_5").empty().hide();
-                    $("#ctdiv_3").hide();
-                    $("#ctdiv_opt").hide();
+                    //$("#ctdiv_3").hide();
                     $("#casSLA").val('');
+                    var url = '@Url.Action("GetSourceType", "Casetype")';
+                    $.post(url, function (data) {
+                        $("#divsourceType").html(data);
+                    });
+                    $("#ctdiv_3").show();
+                    $("#ctdiv_opt").show();
+                    //$("#casURLAccount").focus();
                     if( $(ref).val()=="1" )
                     {
+                        console.log($("#lblSourceType").html());
                         $("#CaseGroup1").show();
                         $("#CaseGroup2").show();
+                        $("#lblSourceTypeRef").html("รายละเอียดช่องทางซื้อขาย");
+                        $("#lblSourceType").html("ช่องทางการซื้อขาย");
+                        $("#lblRedDetail").html("หลักฐานประกอบ");
+                        $("#lblDetail").html("รายละเอียดร้องเรียน");
                     }
-                    else {
+                    else if ($(ref).val() == "2" || $(ref).val() == "3") {
                         resetValueGroup();
                         $("#CaseGroup1").hide();
                         $("#CaseGroup2").show();
+                            $("#lblSourceTypeRef").html("อ้างอิงระบุเจาะจงURLหรือID");
+                            $("#lblSourceType").html("ประเภทสื่อผิดกฎหมายที่อ้างอิง");
+                            $("#lblRedDetail").html("รายละเอียดเพิ่มเติม");
+                            $("#lblDetail").html("เนื้อหารายละเอียดการร้องเรียน");
+                    }else
+                    {
+                        resetValueGroup();
+                        $("#CaseGroup1").hide();
+                        $("#CaseGroup2").hide();
                     }
-                }
-                if (current_lv == 2) {
-                    //$("#ctdiv_3").empty().hide();
-                    $("#ctdiv_4").hide();
-                    $("#ctdiv_5").empty().hide();
-                    $("#ctdiv_opt").hide();
-                }
-                if (current_lv == 3) {
-                    //$("#ctdiv_4").empty().hide();
-                    $("#ctdiv_5").empty().hide();
-                    $("#ctdiv_opt").hide();
-                }
-                if (current_lv == 4) {
-                    $("#ctdiv_5").empty().hide();
-                    $("#ctdiv_opt").hide();
                 }
 
                 // Set casLevel                
@@ -311,21 +303,11 @@
                     $.post(url, function (data)
                     {
                         $("#ctdiv_" + next_lv).html(data);
-                    });
-                    
+                    });                  
                     
                 } else {
 
-                    if (current_lv == 2) {
-                        //alert(id);
-                        var url = '@Url.Action("GetSourceType", "Casetype")';
-                        $.post(url, function (data) {
-                            $("#ctdiv_3").html(data);
-                        });
-                        $("#ctdiv_3").show();
-                        $("#ctdiv_opt").show();
-                        //$("#casURLAccount").focus();
-                    }
+
                     //$("#casURLAccount").focus();
                     //$("#casNote").focus();                    
                     $("#sla").text(sla);                  
@@ -343,7 +325,7 @@
         }
 
         function onSourceTypeChange(ref) {
-            $("#ctdiv_4").show();
+            
             $("#casLevel3").val($(ref).find("option:selected").text());
 
         }
@@ -477,15 +459,6 @@
                                 Html.RenderAction("ContactInfo", "Contact");
                             }
                             </div>
-
- 
-                            
-
-
-
-
-
-
                             @if(NEWCRM.Common.AppUtils.Session.Activity.ctaID.HasValue)
                             {
                                 using (Ajax.BeginForm("NewCaseSave", "Case",
@@ -501,17 +474,22 @@
                                             }
                                         </div>
                                         <div id="ctdiv_2" class="form-group"></div>
-                                        <div id="ctdiv_3" class="form-group"></div>
+                                        <div id="ctdiv_3" class="form-group">
+                                            <label for="sourceType" id="lblSourceType" name="lblSourceType" class="col-sm-3 control-label">ช่องทางการซื้อขาย</label>
+                                            <div id="divsourceType" class="col-sm-9 margin-bottom-xl">
+                                                
+                                            </div>
+                                        </div>
                                         <div id="ctdiv_4" class="form-group" >
-                                            <label for="casenote" class="col-sm-3 control-label">รายละเอียดช่องทางซื้อขาย</label>
+                                            <label for="casenote" id="lblSourceTypeRef" class="col-sm-3 control-label">รายละเอียดช่องทางซื้อขาย</label>
                                             <div class="col-sm-8 margin-bottom-xl">
-                                                <input type="text" class="form-control" id="casURLAccount" name="casURLAccount" required />
+                                                <input type="text" class="form-control" id="casURLAccount" name="casURLAccount" />
                                             </div>
                                             <div id="ctdiv_7" class="col-sm-1 margin-bottom-xl">
                                                 <h><span class="label label-warning">Child Case</span></h>
                                                     <input type="hidden" class="form-control" id="casParentID" name="casParentID" value="" />
                                             </div>
-                                            <div id="ctcaseparent" class="col-sm-12 margin-bottom-xl">
+                                            <div id="ctcaseparent" class="col-sm-12 form-group margin-bottom-xl">
 
                                             </div>
                                         </div>
@@ -533,7 +511,7 @@
                                         <div class="form-group">
                                             <label for="casenote" class="col-sm-3 control-label">Add Note</label>
                                             <div class="col-sm-9 margin-bottom-xl">
-                                                <textarea id="casNote" name="casNote" class="form-control" rows="6" required data-rule-minlength="1"></textarea>
+                                                <textarea id="casNote" name="casNote" class="form-control" rows="6" data-rule-minlength="1"></textarea>
                                             </div>
                                         </div>
                                         
