--- a/NEWCRM/Views/Case/NewCase.cshtml
+++ b/NEWCRM/Views/Case/NewCase.cshtml
@@ -286,6 +286,8 @@
                         resetValueGroup();
                         $("#CaseGroup1").hide();
                         $("#CaseGroup2").hide();
+                        $("#lblSourceTypeRef").html("อ้างอิงระบุเจาะจงURLหรือID");
+                        $("#lblSourceType").html("ประเภทสื่อผิดกฎหมายที่อ้างอิง");
                     }
                 }
 
